# dropship-tools

./: .env.example  .gitignore  LAUNCH.md  LICENSE  README.md  package.json  pyproject.toml  vercel.json
api/: checkout.js
docs/: index.html  sitemap.xml  success.html
docs/blog/: best-dropshipping-products-australia-2026.html  dropshipping-profit-margin-calculator.html  how-to-find-winning-dropshipping-products.html  index.html  shopify-dropshipping-vs-woocommerce-australia.html
marketing/: community-posts-2026-04-11.md  post_reddit.py  post_reddit_api.py  reddit_log.md
src/ds/: cli.py  config.py  margin.py  tracker.py
src/ds/content/: ads.py  listings.py  scripts.py
src/ds/scout/: cj.py  research.py  trends.py
stripe/: products.json  setup.js
tests/: test_ads.py  test_cj.py  test_integration.py  test_listings.py  test_margin.py  test_research.py  test_scripts.py  test_tracker.py  test_trends.py
