[project]
name = "dropship-tools"
version = "0.1.0"
description = "Dropshipping automation toolkit"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
    "pytrends>=4.9",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[project.scripts]
ds = "ds.cli:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
