[project]
name = "dropship-tools"
version = "0.1.0"
description = "AI-powered dropshipping automation toolkit — product research, listing generation, and ad copy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Liam Frazer" },
]
keywords = ["dropshipping", "ecommerce", "tiktok-shop", "shopify", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.40",
    "pytrends>=4.9",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/liamfraz/dropship-tools"
Repository = "https://github.com/liamfraz/dropship-tools"
Issues = "https://github.com/liamfraz/dropship-tools/issues"

[project.scripts]
ds = "ds.cli:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
